--- a/index.html
+++ b/index.html
@@ -33,6 +33,11 @@
             You specify this stuff in the class.
           </div>
         </div>
+          <div class="container" onclick="myFunction(this)">
+            <div class="bar1"></div>
+            <div class="bar2"></div>
+            <div class="bar3"></div>
+          </div>
          <p class="flow-text">I am Flowing Text, meaning I scale responsive</p>
          <a class="waves-effect waves-light btn" href="https://materializecss.com/buttons.html" target="_blank">click me for more info</a>
       </div>
